--- a/dog_app.ipynb
+++ b/dog_app.ipynb
@@ -254,7 +254,7 @@
    "source": [
     "human_files_short = human_files[:100]\n",
     "dog_files_short = train_files[:100]\n",
-    "# Do NOT modify the code above this line.\n",
+    "\n",
     "count_H = 0\n",
     "for file in human_files_short:\n",
     "    if face_detector(file):\n",
@@ -266,9 +266,7 @@
     "    if face_detector(file):\n",
     "        count_D+=1\n",
     "\n",
-    "print(\"Percentage of faces in dog files: {}%\".format(count_D))\n",
-    "## TODO: Test the performance of the face_detector algorithm \n",
-    "## on the images in human_files_short and dog_files_short."
+    "print(\"Percentage of faces in dog files: {}%\".format(count_D))"
    ]
   },
   {
@@ -478,11 +476,11 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Test the performance of the dog_detector function\n",
+    "### Test the performance of the dog_detector function\n",
     "### on the images in human_files_short and dog_files_short.\n",
     "human_files_short = human_files[:100]\n",
     "dog_files_short = train_files[:100]\n",
-    "# Do NOT modify the code above this line.\n",
+    "\n",
     "count_H = 0\n",
     "for file in human_files_short:\n",
     "    if dog_detector(file):\n",
@@ -610,9 +608,6 @@
     "model.add(Dense(200, activation='relu'))\n",
     "model.add(Dropout(0.35))\n",
     "model.add(Dense(133, activation='softmax'))\n",
-    "\n",
-    "### TODO: Define your architecture.\n",
-    "\n",
     "model.summary()"
    ]
   },
@@ -668,21 +663,18 @@
     "\n",
     "# create and configure augmented image generator\n",
     "datagen_train = ImageDataGenerator(\n",
-    "    width_shift_range=0.2,  # randomly shift images horizontally (20% of total width)\n",
-    "    height_shift_range=0.2, # randomly shift images vertically (20% of total height)\n",
-    "    shear_range=0.2,\n",
-    "    zoom_range=0.2,\n",
-    "    rotation_range=40,\n",
+    "    width_shift_range=0.1,  # randomly shift images horizontally (10% of total width)\n",
+    "    height_shift_range=0.1, # randomly shift images vertically (10% of total height)\n",
+    "    shear_range=0.05, # randomly apply shearing transformations\n",
+    "    zoom_range=0.15, # randomly zoom inside pictures by 15%\n",
+    "    rotation_range=25, # randomly rotate images by 25 %\n",
     "    horizontal_flip=True) # randomly flip images horizontally\n",
     "\n",
     "# fit augmented image generator on data\n",
     "datagen_train.fit(train_tensors)\n",
     "\n",
-    "### TODO: specify the number of epochs that you would like to use to train the model.\n",
-    "\n",
     "epochs = 50\n",
     "batch_size = 32\n",
-    "### Do NOT modify the code below this line.\n",
     "\n",
     "checkpointer = ModelCheckpoint(filepath='saved_models/weights.best.from_scratch.hdf5', \n",
     "                               verbose=1, save_best_only=True)\n",
@@ -987,7 +979,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Obtain bottleneck features from another pre-trained CNN.\n",
+    "### Obtain bottleneck features from another pre-trained CNN.\n",
     "network,input_shape = 'Xception',(7, 7, 2048)\n",
     "bottleneck_features = np.load('bottleneck_features/Dog{}Data.npz'.format(network))\n",
     "train_network = bottleneck_features['train']\n",
@@ -1024,7 +1016,6 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Define your architecture.\n",
     "from keras.layers import Dense, Flatten, Dropout, GlobalAveragePooling2D, AveragePooling2D\n",
     "from keras.models import Sequential\n",
     "\n",
@@ -1056,7 +1047,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Compile the model.\n",
+    "### Compile the model.\n",
     "final_model.compile(loss='categorical_crossentropy', optimizer='rmsprop', \n",
     "                  metrics=['accuracy'])"
    ]
@@ -1085,7 +1076,6 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Train the model.\n",
     "from keras.callbacks import ModelCheckpoint   \n",
     "\n",
     "# train the model\n",
@@ -1115,7 +1105,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Load the model weights with the best validation loss.\n",
+    "### Load the model weights with the best validation loss.\n",
     "final_model.load_weights('saved_models/model_{}.weights.best.hdf5'.format(network))"
    ]
   },
@@ -1141,7 +1131,7 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Calculate classification accuracy on the test dataset.\n",
+    "### Calculate classification accuracy on the test dataset.\n",
     "\n",
     "final_model_predictions = [np.argmax(final_model.predict(np.expand_dims(feature, axis=0))) for feature in test_network]\n",
     "test_accuracy = 100*np.sum(np.array(final_model_predictions)==np.argmax(test_targets, axis=1))/len(final_model_predictions)\n",
@@ -1181,16 +1171,13 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Write a function that takes a path to an image as input\n",
-    "### and returns the dog breed that is predicted by the model.\n",
-    "from extract_bottleneck_features import *\n",
+    "### predict_breed takes a path to an image as input and a \n",
+    "### theshold for likeliness and returns the list of dog \n",
+    "### breeds along with likeliness that is predicted by the model.\n",
     "\n",
     "def predict_breed(img_path,threshold = 0.1):\n",
-    "    # extract bottleneck features\n",
     "    bottleneck_feature = extract_Xception(path_to_tensor(img_path))\n",
-    "    # obtain predicted vector\n",
     "    predicted_vector = final_model.predict(bottleneck_feature)\n",
-    "    # return dog breed that is predicted by the model\n",
     "    breeds = []    \n",
     "    for i in range(len(predicted_vector[0])):\n",
     "        if predicted_vector[0][i] > threshold:\n",
@@ -1236,8 +1223,6 @@
    },
    "outputs": [],
    "source": [
-    "### TODO: Write your algorithm.\n",
-    "### Feel free to use as many code cells as needed.\n",
     "def human_dog_prediction(imgpath, threshold = 0.1):\n",
     "    Human = True    \n",
     "    if dog_detector(imgpath):\n",
@@ -1279,24 +1264,28 @@
    },
    "outputs": [],
    "source": [
-    "## TODO: Execute your algorithm from Step 6 on\n",
-    "## at least 6 images on your computer.\n",
-    "## Feel free to use as many code cells as needed.\n",
+    "### Change n_images to number of images to use for testing. \n",
+    "### Put test images in TestImages/ and label as 0.jpg, \n",
+    "### 1.jpg, and so on.\n",
+    "\n",
     "n_images = 12\n",
     "for i in range(n_images):\n",
     "    path = 'TestImages/' + str(i) + '.jpg'\n",
     "    Human,prediction = human_dog_prediction(path)\n",
     "    if Human:\n",
-    "        print('Human')\n",
+    "        print('I see a Human')\n",
     "    else:\n",
-    "        print('Dog')    \n",
+    "        print('I see a Dog')\n",
+    "        \n",
+    "    # Plot the image    \n",
     "    img = cv2.imread(path)\n",
     "    img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "    plt.imshow(img_rgb)\n",
     "    plt.show()\n",
     "    \n",
     "    for b in prediction:\n",
-    "        print (b[0],\"%.2f% %\" % b[1])\n",
+    "        print ('Predicted Breed: ',b[0],\"Likelihood %.2f% %\" % b[1])\n",
+    "        \n",
     "    print('\\n')"
    ]
   },
